--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
                     Sortear amigo
                 </button>
+                <button id="botaoZerar" class="button-reset" onclick="reiniciarJogo()" style="display: none;">
+                    Zerar jogo
+                </button>
+
             </div>
         </section>
     </main>
